Trying to add flexibility of file types downloaded

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,5 @@
+[DEFAULT]
+ext='.webm', '.gif', '.avi', '.mp4', '.jpg', '.png', '.mov', '.ogg', '.wmv', '.mp2', '.mp3', '.mkv'
 [ALPHA]
 client_id=<ID HERE>
 client_secret=<SECRET HERE>
